<resources>
    <string name="app_name">Mis pelis favoritas</string>
    <string name="Title">Título</string>
    <string name="TitleHint">Título de la película</string>
    <string name="Argument">Argumento</string>
    <string name="ArgumentHint">Sinopsis de la película</string>
    <string name="Category">Categoría</string>
    <string name="Duration">Duración</string>
    <string name="DateOfTheMovie">Fecha de la película</string>
    <string name="Save">Guardar</string>
    <string name="saveMessage">Guardado</string>
    <string name="msg_create_new_category">Crear categoría</string>
    <string name="msg_create_modify_category">Editar categoría</string>
    <string name="msg_completed_action">Acción completada</string>
    <string name="msg_canceled_action">Acción cancelada</string>
    <string name="invalid_title">Título inválido</string>
    <string name="invalid_argument">El argumento debe tener mínimo 20 caracteres</string>
    <string name="invalid_duration">La duración debe ser un número entero de minutos</string>
    <string name="invalid_date">La fecha es demasiado corta</string>
    <string name="CategoryName">Nombre de la categoría</string>
    <string name="CategoryDescription">Descripción de la categoría</string>
    <string name="CategoryCreation">Creación de categoría</string>
    <string name="ModificateCategory">Modificar categoría</string>
    <string name="contentDescriptionMovieImage">Movie imagen</string>
    <string name="tvMovieName">Name</string>
    <string name="tvDateMovie">Date</string>
    <string name="title_activity_show_movie">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="category">Category</string>
    <string name="tenet_categoria">Tenet Category</string>
    <string name="premiere">Premiere date</string>
    <string name="tenet_estreno">Tenet premiere date</string>
    <string name="tenet_premiere">Tener premiere date</string>
    <string name="duration">Duration</string>
    <string name="tenet_duracion">Tenet duration</string>
    <string name="desc_cover">Cover description</string>
    <string name="content">Content</string>
    <string name="tenet_argument">Tenet argument</string>
    <string name="background_image_desc">Background image description</string>
    <string name="newMovie">Add new movie</string>
    <string name="select_a_category">You must select a category</string>
    <string name="share_menu_item">Share menu item</string>
    <string name="no_connection">You don\'t have active connection</string>
    <string name="subject_share">Share:</string>
    <string name="title">Título</string>
    <string name="title_Title">Title</string>
    <string name="title_Actors">Actors</string>
    <string name="title_Plot">Plot</string>
    <string name="title_Info">Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="modify_category">Modificar categoría</string>
    <string name="image_actor">Actor image</string>
    <string name="name_actor">Actor name</string>
    <string name="name_character">Name of the character</string>
</resources>