<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="@dimen/spacing_xlarge">

    <ImageView
        android:id="@+id/actor_image"
        android:layout_width="48dp"
        android:layout_height="72dp"
        android:contentDescription="@string/image_actor"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_xlarge"
        android:layout_marginRight="@dimen/spacing_xlarge"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/actor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_actor"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/character_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_character"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />


    </LinearLayout>
</LinearLayout>
